--- a/index.html
+++ b/index.html
@@ -56,73 +56,9 @@
             AI_RECOMMENDATION: 'AI_RECOMMENDATION'
         };
 
-        // --- 3. 배경 효과 (Lego) ---
-        const LegoStackingBackground = () => {
-            const [blocks, setBlocks] = useState([]);
-            const containerRef = useRef(null);
-            const colHeights = useRef([]); 
-            const COLORS = ['#EF4444', '#3B82F6', '#F59E0B', '#10B981', '#FFFFFF', '#8B5CF6'];
-            const BLOCK_SIZE = 60;
+        // --- 4. 뷰 컴포넌트들 ---
 
-            useEffect(() => {
-                if (!containerRef.current) return;
-                const cols = Math.ceil(window.innerWidth / BLOCK_SIZE);
-                colHeights.current = new Array(cols).fill(0);
-                let blockIdCounter = 0;
-                const maxBlocks = 40; 
-
-                const interval = setInterval(() => {
-                    if (blockIdCounter >= maxBlocks) {
-                        clearInterval(interval);
-                        return;
-                    }
-                    const randomCol = Math.floor(Math.random() * cols);
-                    const currentColor = COLORS[Math.floor(Math.random() * COLORS.length)];
-                    const currentHeight = colHeights.current[randomCol];
-                    
-                    const newBlock = {
-                        id: blockIdCounter++,
-                        col: randomCol,
-                        targetBottom: currentHeight,
-                        color: currentColor,
-                    };
-                    setBlocks(prev => [...prev, newBlock]);
-                    colHeights.current[randomCol] += (BLOCK_SIZE * 0.8);
-                }, 800);
-                return () => clearInterval(interval);
-            }, []);
-
-            return (
-                <div ref={containerRef} className="fixed inset-0 overflow-hidden pointer-events-none -z-10 bg-gray-100">
-                    <style>{`
-                        .lego-block {
-                            position: absolute; width: 60px; height: 50px; border-radius: 2px;
-                            box-shadow: inset -2px -4px 0 rgba(0,0,0,0.15), 4px 4px 8px rgba(0,0,0,0.05);
-                            transition: top 1.5s cubic-bezier(0.25, 1, 0.5, 1); will-change: top;
-                        }
-                        .lego-block::before {
-                            content: ''; position: absolute; top: -8px; left: 6px; width: 48px; height: 8px;
-                            background-color: inherit; filter: brightness(1.1); border-radius: 4px 4px 0 0;
-                            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-                        }
-                    `}</style>
-                    {blocks.map((block) => (
-                        <div key={block.id} className="lego-block"
-                            style={{
-                                left: block.col * BLOCK_SIZE,
-                                backgroundColor: block.color,
-                                top: -100,
-                                transform: `translateY(calc(100vh - ${block.targetBottom + 60}px))`
-                            }}
-                        />
-                    ))}
-                </div>
-            );
-        };
-
-        // --- 4. 뷰 컴포넌트들 (모두 완성됨) ---
-
-        // 4.1 DashboardView
+        // 4.1 DashboardView (배경 애니메이션 제거됨)
         const DashboardView = () => {
             const [expanded, setExpanded] = useState({});
             const toggle = (id) => setExpanded(prev => ({ ...prev, [id]: !prev[id] }));
@@ -130,15 +66,14 @@
 
             return (
                 <div className="animate-fade-in space-y-6">
-                    <LegoStackingBackground />
-                    <div className="bg-white/90 backdrop-blur-sm p-6 rounded-lg shadow-sm">
+                    <div className="bg-white p-6 rounded-lg shadow-sm">
                         <h2 className="text-2xl font-bold mb-2">안녕하세요, 학습자님! 👋</h2>
                         <p className="text-gray-600">오늘도 나만의 학습 여정을 벽돌 쌓듯 차곡차곡 쌓아보세요.</p>
                     </div>
 
                     <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
                         {/* 차트 영역 */}
-                        <div className="bg-white/95 backdrop-blur-sm p-6 rounded-lg shadow-sm">
+                        <div className="bg-white p-6 rounded-lg shadow-sm">
                             <h3 className="text-lg font-semibold mb-4">졸업 학점 달성도</h3>
                             <div className="h-64 flex justify-center items-center">
                                 <ResponsiveContainer width="100%" height="100%">
@@ -153,7 +88,7 @@
                         </div>
 
                         {/* 현황 영역 */}
-                        <div className="bg-white/95 backdrop-blur-sm p-6 rounded-lg shadow-sm space-y-4">
+                        <div className="bg-white p-6 rounded-lg shadow-sm space-y-4">
                              <h3 className="text-lg font-semibold mb-4">나의 모듈 현황</h3>
                              <div className="border rounded-lg p-4">
                                 <button onClick={() => toggle('m1')} className="w-full flex justify-between items-center font-bold">
@@ -192,7 +127,7 @@
              };
 
              return (
-                 <div className="space-y-6 animate-fade-in bg-white/95 p-6 rounded-lg shadow-sm">
+                 <div className="space-y-6 animate-fade-in bg-white p-6 rounded-lg shadow-sm">
                      <h2 className="text-2xl font-bold">🤖 AI 추천</h2>
                      <p className="text-gray-600">학습 이력과 관심사를 분석하여 최적의 마이크로 디그리를 추천합니다.</p>
                      
@@ -215,7 +150,7 @@
 
         // 4.3 CurriculumDesignView
         const CurriculumDesignView = () => (
-            <div className="animate-fade-in bg-white/95 p-6 rounded-lg shadow-sm h-[600px]">
+            <div className="animate-fade-in bg-white p-6 rounded-lg shadow-sm h-[600px]">
                 <h2 className="text-2xl font-bold mb-4">📐 나의 모듈 설계</h2>
                 <div className="flex flex-col md:flex-row h-full gap-4">
                     <div className="w-full md:w-1/3 bg-gray-50 p-4 rounded border">
@@ -239,7 +174,7 @@
             </div>
         );
 
-        // 4.4 LearningHistoryView (완성)
+        // 4.4 LearningHistoryView
         const LearningHistoryView = () => {
             const historyData = [
                 { year: '2023-1', subject: '컴퓨터개론', credit: 3, grade: 'A+' },
@@ -278,7 +213,7 @@
             );
         };
 
-        // 4.5 ModuleExplorationView (완성)
+        // 4.5 ModuleExplorationView
         const ModuleExplorationView = () => {
             const modules = [
                 { title: 'AI 서비스 개발 MD', tag: '공학', color: 'bg-indigo-100 text-indigo-800' },
@@ -318,88 +253,4 @@
                                 setCurrentView(view);
                                 setIsMobileMenuOpen(false);
                             }}
-                            className={`w-full flex items-center gap-3 px-4 py-2 rounded-lg text-left transition-colors ${
-                                isActive 
-                                    ? 'bg-blue-100 text-blue-700 font-semibold' 
-                                    : 'text-gray-700 hover:bg-gray-100'
-                            }`}
-                        >
-                            <Icon className="w-5 h-5" />
-                            {label}
-                        </button>
-                    </li>
-                );
-            };
-
-            const SidebarContent = () => (
-                <>
-                    <div className="flex justify-between items-center mb-8">
-                        <h1 className="text-xl font-bold text-gray-900">TU 학습설계 AI</h1>
-                        {isMobileMenuOpen && (
-                            <button onClick={() => setIsMobileMenuOpen(false)} className="lg:hidden text-gray-500">
-                                <XIcon className="w-6 h-6" />
-                            </button>
-                        )}
-                    </div>
-                    <nav className="flex-1">
-                        <ul className="space-y-2">
-                            <NavItem view={ViewState.DASHBOARD} label="대시보드" icon={DashboardIcon} />
-                            <NavItem view={ViewState.LEARNING_HISTORY} label="학습 이력" icon={HistoryIcon} />
-                            <NavItem view={ViewState.MODULE_EXPLORATION} label="모듈 탐색" icon={ExploreIcon} />
-                            <NavItem view={ViewState.CURRICULUM_DESIGN} label="나의 모듈 설계" icon={DesignIcon} />
-                            <NavItem view={ViewState.AI_RECOMMENDATION} label="AI 추천" icon={AiIcon} />
-                        </ul>
-                    </nav>
-                    <div className="border-t pt-4">
-                        <ul className="space-y-2">
-                            <li><a href="#" className="flex items-center gap-3 px-4 py-2 text-gray-700 hover:bg-gray-100 rounded-lg"><span className="text-sm">커뮤니티</span></a></li>
-                        </ul>
-                    </div>
-                </>
-            );
-
-            return (
-                <div className="flex h-screen bg-gray-100">
-                    <aside className="w-64 bg-white p-6 border-r hidden lg:flex flex-col fixed h-full z-10">
-                        <SidebarContent />
-                    </aside>
-
-                    {isMobileMenuOpen && (
-                        <div className="fixed inset-0 z-50 lg:hidden">
-                            <div className="fixed inset-0 bg-black/50 backdrop-blur-sm animate-fade-in" onClick={() => setIsMobileMenuOpen(false)}></div>
-                            <aside className="fixed inset-y-0 left-0 w-64 bg-white p-6 shadow-xl flex flex-col animate-slide-in-left">
-                                <SidebarContent />
-                            </aside>
-                        </div>
-                    )}
-
-                    <main className="flex-1 lg:ml-64 overflow-y-auto">
-                        <div className="p-6 max-w-7xl mx-auto">
-                            <div className="flex justify-between items-center mb-6">
-                                <button className="lg:hidden p-2 rounded-md text-gray-600 hover:bg-gray-100" onClick={() => setIsMobileMenuOpen(true)}>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                                </button>
-                                <div className="hidden lg:block"></div>
-                                <div className="relative w-full max-w-xs">
-                                    <input type="text" placeholder="모듈명, 교과목명 검색..." className="w-full pl-10 pr-4 py-2 border rounded-full text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 bg-white" />
-                                    <svg className="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-gray-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                                </div>
-                            </div>
-
-                            {/* Views Rendering */}
-                            {currentView === ViewState.DASHBOARD && <DashboardView />}
-                            {currentView === ViewState.AI_RECOMMENDATION && <AiRecommendationView />}
-                            {currentView === ViewState.LEARNING_HISTORY && <LearningHistoryView />}
-                            {currentView === ViewState.MODULE_EXPLORATION && <ModuleExplorationView />}
-                            {currentView === ViewState.CURRICULUM_DESIGN && <CurriculumDesignView />}
-                        </div>
-                    </main>
-                </div>
-            );
-        }
-
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
-</html>
+                            className={`w-full flex items
